# alppad

./: .gitignore  CMakeLists.txt  README.md  alppad.pro  findreplacedialog.cpp  findreplacedialog.h  findreplacedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.h  notemanager.cpp  notemanager.h  noteslistwidget.cpp  noteslistwidget.h  noteslistwidget.ui  notewidget.cpp  notewidget.h  renamedialog.cpp  renamedialog.h  renamedialog.ui  resources.qrc  xmlstorage.cpp  xmlstorage.h
